--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,6 @@ dependencies {
 
     implementation group: 'com.squareup.retrofit2', name: 'retrofit', version: '2.9.0'
     implementation group: 'com.squareup.retrofit2', name: 'converter-gson', version: '2.9.0'
+
+    implementation 'com.google.android.gms:play-services-location:19.0.1'
 }
