--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,9 @@ dependencies {
     implementation group: 'com.squareup.retrofit2', name: 'converter-gson', version: '2.9.0'
 
     implementation 'com.google.android.gms:play-services-location:19.0.1'
+
+    implementation 'io.github.ParkSangGwon:tedpermission-normal:3.3.0'
+
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0'
 }
