--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,4 +63,6 @@ dependencies {
 
     implementation 'androidx.activity:activity-ktx:1.4.0'
     implementation 'androidx.fragment:fragment-ktx:1.4.1'
+
+    implementation 'com.naver.maps:map-sdk:3.14.0'
 }
