--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.sjchoi.weather">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -15,7 +16,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/mainTheme"
-        android:usesCleartextTraffic="true">
+        android:usesCleartextTraffic="true"
+        tools:replace="android:appComponentFactory"
+        android:appComponentFactory="whateverString">
+
+        <meta-data
+            android:name="com.naver.maps.map.CLIENT_ID"
+            android:value="47cfbsdnq2" />
+
         <activity
             android:name=".SplashActivity"
             android:exported="true" >
