--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,4 +65,6 @@ dependencies {
     implementation 'androidx.fragment:fragment-ktx:1.4.1'
 
     implementation 'com.naver.maps:map-sdk:3.14.0'
+
+    implementation 'androidx.cardview:cardview:1.0.0'
 }
