--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
             android:value="47cfbsdnq2" />
 
         <activity
-            android:name=".activity.SplashActivity"
+            android:name=".activity.LoadingActivity"
             android:exported="true" >
 
             <intent-filter>
